[workspace]
members = [
    "crates/biolance-core",
    "crates/biolance-variants",
    "crates/biolance-cli",
]
resolver = "2"

# ---- Shared dependency versions (used by all crates via workspace.dependencies) ----
[workspace.dependencies]
noodles      = { version = "0", features = ["vcf", "bcf", "bgzf", "csi"] }
lancedb      = "0"
arrow-array  = "=57.3.0"
arrow-schema = "=57.3.0"
futures      = "0.3"
tokio        = { version = "1", features = ["full"] }
clap         = { version = "4", features = ["derive"] }
rayon        = "1"
anyhow       = "1"
thiserror    = "2"
indicatif    = "0"
chrono       = { version = "0.4", default-features = false, features = ["clock"] }
biolance-core     = { path = "crates/biolance-core" }
biolance-variants = { path = "crates/biolance-variants" }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
