[workspace]
members = [
    "crates/genolance-core",
    "crates/genolance-variants",
    "crates/genolance-cli",
]
resolver = "2"

[workspace.package]
version = "0.2.0"
edition = "2021"
rust-version = "1.87"
authors = ["Nathan Riley <git@nathanriley.com>"]
license = "Apache-2.0"
repository = "https://github.com/Sigilweaver/GenoLance"
homepage = "https://sigilweaver.app/genolance/"
documentation = "https://sigilweaver.app/genolance/docs/"
readme = "README.md"
keywords = ["variants", "vcf", "clinvar", "lance", "bioinformatics"]
categories = ["science", "command-line-utilities", "database"]

[workspace.lints.rust]
unsafe_code = "forbid"

# ---- Shared dependency versions (used by all crates via workspace.dependencies) ----
[workspace.dependencies]
noodles      = { version = "0", features = ["vcf", "bcf", "bgzf", "csi"] }
lancedb      = "0"
arrow-array  = "=57.3.0"
arrow-schema = "=57.3.0"
futures      = "0.3"
tokio        = { version = "1", features = ["full"] }
clap         = { version = "4", features = ["derive"] }
rayon        = "1"
anyhow       = "1"
thiserror    = "2"
indicatif    = "0"
chrono       = { version = "0.4", default-features = false, features = ["clock"] }
genolance-core     = { path = "crates/genolance-core",     version = "0.2.0" }
genolance-variants = { path = "crates/genolance-variants", version = "0.2.0" }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
