[package]
name = "genolance-core"
description = "Core store, schema, and gene-list types for GenoLance"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[lints]
workspace = true

[dependencies]
lancedb      = { workspace = true }
arrow-array  = { workspace = true }
arrow-schema = { workspace = true }
futures      = { workspace = true }
tokio        = { workspace = true }
anyhow       = { workspace = true }
thiserror    = { workspace = true }
chrono       = { workspace = true }
